--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <link rel="stylesheet" href="css/styles.css" text="text/css">
+    <title>Landscaping</title>
   </head>
   <body>
-
+    <h1>Landscaping For Beginners</h1>
+    
   </body>
 </html>
