--- a/about-me.html
+++ b/about-me.html
@@ -8,6 +8,10 @@
     <body>
       <h1>Landscaping For Beginners</h1>
       <h3><span class="title"><a href="index.html">Home</a></span> <span class="title"><a href="#">About me</a></span></h3>
+
+      <p>I have been working Landscaping for 5 years now. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+      <p>We are always looking for new people to hire. Contact us at (800-LAND-SCAPE)</p>
     </body>
   </div>
 </html>
